fix: Modificar modulos estudiante, seguridad y academico